Fix card alignment and height adjustment for better responsiveness on medium and large screens

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -75,8 +75,14 @@ html {
         transition: opacity 0.5s ease-in-out;
     }
 
+    
+/* OFFERS */
 
-/* ABOUT US: Button with Icon Animation */
+.ts-card-shadow {
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px;
+  }
+
+/* ABOUT: Button with Icon Animation */
 
 @media (min-width: 768px) { 
    
